@@ -1,6 +1,8 @@
 Version 1.10.6+dev:
  * Language and i18n:
    * Updated translations: Indonesian, Portuguese, Vietnamese
+ * Miscellaneous and bug fixes
+   * Improved: Autorevision based revision numbers in CMake.
 
 Version 1.10.6:
  * Campaigns:
